# cellular-automata

./: CMakeLists.txt
inc/: cell_owner.h  cellular_automata_component.h  chunk.h  field.h  field_renderer.h  lifegame_cell.h
inc/components/: abstract_basic_component.h  cellular_automata_component.h  component_base.h  component_interface.h  empty_component.h
inc/game_logics/: cell_base.h  cell_owner.h  chunk.h  field.h  lifegame_cell.h
inc/logics/: cell_base.h  cell_owner.h  chunk.h  field.h  lifegame_cell.h
inc/renderers/: field_renderer.h
inc/system/: component_manager.h  utils.h
src/: cell_base.cpp  field.cpp  field_renderer.cpp  main.cpp
src/components/: cellular_automata_component.cpp
src/game_logics/: cell_base.cpp  field.cpp
src/logics/: cell_base.cpp  chunk.cpp  field.cpp
src/renderers/: field_renderer.cpp
src/system/: component_manager.cpp
